<resources>
    <string name="app_name">ZuriListViewApp</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="zuri_password">zuriPassword</string>
    <string name="zuri_email">zuri@gmail.com</string>
    <string name="email_error_message">Please enter the email described in the helper text</string>
    <string name="password_error_message">Please enter the password described in the helper text</string>
</resources>